--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test:unit": "vitest --environment jsdom"
   },
   "dependencies": {
+    "jquery": "^3.6.0",
+    "slick-carousel": "^1.8.1",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
