--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "agile": "^0.0.2",
     "axios": "^0.26.1",
     "sass": "^1.49.9",
+    "socket.io-client": "^4.4.1",
     "vue": "^3.2.31",
     "vue-agile": "^2.0.0",
     "vue-router": "^4.0.12",
